# opengl_way

./: CMakeLists.txt  README.md  README1.md
include/core/: init.hpp
include/model/: mesh.h  model.h
include/tools/: camera.h  opengl.hpp  shader.h
libs/: assimp-vc142-mtd.lib  glfw3.lib
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
shaders/6/: 3.1.2.shadow_mapping.fs  6.1.skybox.fs  6.1.skybox.vs
src/: cubesky.cpp  main.cpp  shadowTest.cpp
